--- a/charts/thoras/templates/agent/rbac.yaml
+++ b/charts/thoras/templates/agent/rbac.yaml
@@ -1,25 +1,18 @@
-{{- if .Values.thorasAgent.enabled }}
----
-apiVersion: v1
-kind: ServiceAccount
-metadata:
-  labels:
-    {{- include "thoras.labels" . | nindent 4 }}
-  name: {{ .Values.thorasAgent.serviceAccount.name }}
-  namespace: {{ .Release.Namespace }}
-imagePullSecrets:
-{{- if .Values.imageCredentials.secretRef }}
-  - name: {{ .Values.imageCredentials.secretRef }}
-{{- else }}
-  - name: thoras-secret-registry
-{{- end }}
+{{- define "thoras.agent.roles" }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
+{{- if .rbacNamespace }}
+kind: Role
+metadata:
+  name: {{ print .Values.thorasAgent.serviceAccount.name "-" .rbacNamespace }}
+  namespace: {{ .rbacNamespace }}
+{{- else }}
 kind: ClusterRole
 metadata:
+  name: {{ .Values.thorasAgent.serviceAccount.name }}
+{{- end }}
   labels:
     {{- include "thoras.labels" . | nindent 4 }}
-  name: {{ .Values.thorasAgent.serviceAccount.name }}
 rules:
 - apiGroups:
   - '*'
@@ -36,18 +29,55 @@ rules:
   - '*'
 ---
 apiVersion: rbac.authorization.k8s.io/v1
+{{- if .rbacNamespace }}
+kind: RoleBinding
+metadata:
+  name: {{ print .Values.thorasAgent.serviceAccount.name "-" .rbacNamespace }}
+{{- else }}
 kind: ClusterRoleBinding
+metadata:
+  name: {{ .Values.thorasAgent.serviceAccount.name }}
+{{- end }}
+  labels:
+    {{- include "thoras.labels" . | nindent 4 }}
+  namespace: {{ .Release.Namespace }}
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+{{- if .rbacNamespace }}
+  kind: Role
+  name: {{ print .Values.thorasAgent.serviceAccount.name "-" .rbacNamespace }}
+  namespace: {{ .rbacNamespace }}
+{{- else }}
+  kind: ClusterRole
+  name: {{ .Values.thorasAgent.serviceAccount.name }}
+{{- end }}
+subjects:
+- kind: ServiceAccount
+  name: {{ .Values.thorasAgent.serviceAccount.name }}
+  namespace: {{ .Release.Namespace }}
+{{- end }}
+
+{{- if .Values.thorasAgent.enabled }}
+---
+apiVersion: v1
+kind: ServiceAccount
 metadata:
   labels:
     {{- include "thoras.labels" . | nindent 4 }}
   name: {{ .Values.thorasAgent.serviceAccount.name }}
   namespace: {{ .Release.Namespace }}
-roleRef:
-  apiGroup: rbac.authorization.k8s.io
-  kind: ClusterRole
-  name: {{ .Values.thorasAgent.serviceAccount.name }}
-subjects:
-- kind: ServiceAccount
-  name: {{ .Values.thorasAgent.serviceAccount.name }}
-  namespace: {{ .Release.Namespace }}
+imagePullSecrets:
+{{- if .Values.imageCredentials.secretRef }}
+  - name: {{ .Values.imageCredentials.secretRef }}
+{{- else }}
+  - name: thoras-secret-registry
+{{- end }}
+
+  {{- if .Values.rbac.namespaces}}
+    {{- range $idx, $namespace := .Values.rbac.namespaces }}
+      {{- template "thoras.agent.roles" ($ | deepCopy | merge (dict "rbacNamespace" $namespace) ) }}
+    {{- end}}
+  {{- else }}
+    {{- template "thoras.agent.roles" $ }}
+  {{- end }}
 {{- end }}
