Fix issue with .namespace vs .rbacNamespace

--- a/charts/thoras/templates/collector/rbac.yaml
+++ b/charts/thoras/templates/collector/rbac.yaml
@@ -67,7 +67,7 @@ rules:
   - patch
 ---
 apiVersion: rbac.authorization.k8s.io/v1
-{{- if .namespace }}
+{{- if .rbacNamespace }}
 kind: RoleBinding
 metadata:
   name: {{ print "thoras-collector-" .rbacNamespace }}
