--- a/charts/thoras/templates/api-server-v2/rbac.yaml
+++ b/charts/thoras/templates/api-server-v2/rbac.yaml
@@ -9,7 +9,7 @@ metadata:
 {{- else }}
 kind: ClusterRole
 metadata:
-  name: {{ .Values.thorasApiServerV2.serviceAccount.name }}
+  name: {{ print .Values.thorasApiServerV2.serviceAccount.name "-role" }}
 {{- end }}
   labels:
     {{- include "thoras.labels" . | nindent 4 }}
@@ -30,12 +30,6 @@ rules:
   - get
   - list
   - watch
-- apiGroups:
-  - thoras.ai
-  resources:
-  - '*'
-  verbs:
-  - '*'
 - apiGroups:
   - batch
   resources:
@@ -59,7 +53,7 @@ metadata:
 {{- else }}
 kind: ClusterRoleBinding
 metadata:
-  name: {{ .Values.thorasApiServerV2.serviceAccount.name }}
+  name: {{ print .Values.thorasApiServerV2.serviceAccount.name "-role" }}
   namespace: {{ .Release.Namespace }}
 {{- end }}
   labels:
@@ -71,7 +65,7 @@ roleRef:
   name: {{ print .Values.thorasApiServerV2.serviceAccount.name "-" .rbacNamespace }}
 {{- else }}
   kind: ClusterRole
-  name: {{ .Values.thorasApiServerV2.serviceAccount.name }}
+  name: {{ print .Values.thorasApiServerV2.serviceAccount.name "-role" }}
 {{- end }}
 subjects:
 - kind: ServiceAccount
@@ -101,6 +95,37 @@ imagePullSecrets:
 {{- else }}
   - name: thoras-secret-registry
 {{- end }}
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: {{ .Values.thorasApiServerV2.serviceAccount.name}}
+  namespace: {{ .Release.Namespace }}
+  labels:
+    {{- include "thoras.labels" . | nindent 4 }}
+rules:
+- apiGroups:
+  - thoras.ai
+  resources:
+  - '*'
+  verbs:
+  - '*'
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: {{ .Values.thorasApiServerV2.serviceAccount.name }}
+  namespace: {{ .Release.Namespace }}
+  labels:
+    {{- include "thoras.labels" . | nindent 4 }}
+roleRef:
+  kind: ClusterRole
+  name: {{ .Values.thorasApiServerV2.serviceAccount.name }}
+  apiGroup: rbac.authorization.k8s.io
+subjects:
+- kind: ServiceAccount
+  name: {{ .Values.thorasApiServerV2.serviceAccount.name }}
+  namespace: {{ .Release.Namespace }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
