--- a/charts/thoras/templates/dashboard/rbac.yaml
+++ b/charts/thoras/templates/dashboard/rbac.yaml
@@ -24,7 +24,7 @@ metadata:
 {{- else }}
 kind: ClusterRole
 metadata:
-  name: {{ .Values.thorasDashboard.serviceAccount.name }}
+  name: {{ print .Values.thorasDashboard.serviceAccount.name "-role" }}
 {{- end }}
   labels:
     {{- include "thoras.labels" . | nindent 4 }}
@@ -50,12 +50,6 @@ rules:
   verbs:
   - '*'
 - apiGroups:
-  - thoras.ai
-  resources:
-  - 'AIScaleTarget'
-  verbs:
-  - '*'
-- apiGroups:
   - batch
   resources:
   - jobs
@@ -66,12 +60,12 @@ apiVersion: rbac.authorization.k8s.io/v1
 {{- if .rbacNamespace }}
 kind: RoleBinding
 metadata:
-  name: {{ print "thoras-dashboard-" .rbacNamespace }}
+  name: {{ print .Values.thorasDashboard.serviceAccount.name "-" .rbacNamespace }}
   namespace: {{ .rbacNamespace }}
 {{- else }}
 kind: ClusterRoleBinding
 metadata:
-  name: thoras-dashboard
+  name: {{ print .Values.thorasDashboard.serviceAccount.name "-role" }}
   namespace: {{ .Release.Namespace }}
 {{- end }}
   labels:
@@ -83,7 +77,7 @@ roleRef:
   name: {{ print .Values.thorasDashboard.serviceAccount.name "-" .rbacNamespace }}
 {{- else }}
   kind: ClusterRole
-  name: {{ .Values.thorasDashboard.serviceAccount.name }}
+  name: {{ print .Values.thorasDashboard.serviceAccount.name "-role" }}
 {{- end }}
 subjects:
 - kind: ServiceAccount
@@ -101,9 +95,40 @@ subjects:
   {{- end }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: {{ .Values.thorasDashboard.serviceAccount.name }}
+  namespace: {{ .Release.Namespace }}
+  labels:
+    {{- include "thoras.labels" . | nindent 4 }}
+rules:
+- apiGroups:
+  - thoras.ai
+  resources:
+  - 'AIScaleTarget'
+  verbs:
+  - '*'
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: {{ .Values.thorasDashboard.serviceAccount.name }}
+  namespace: {{ .Release.Namespace }}
+  labels:
+    {{- include "thoras.labels" . | nindent 4 }}
+roleRef:
+  kind: ClusterRole
+  name: {{ .Values.thorasDashboard.serviceAccount.name }}
+  apiGroup: rbac.authorization.k8s.io
+subjects:
+- kind: ServiceAccount
+  name: {{ .Values.thorasDashboard.serviceAccount.name }}
+  namespace: {{ .Release.Namespace }}
+---
+apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  name: {{ .Values.thorasDashboard.serviceAccount.name }}-role
+  name: {{ .Values.thorasDashboard.serviceAccount.name }}
   namespace: {{ .Release.Namespace }}
   labels:
     {{- include "thoras.labels" . | nindent 4 }}
@@ -115,13 +140,13 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: thoras-dashboard
+  name: {{ .Values.thorasDashboard.serviceAccount.name }}
   namespace: {{ .Release.Namespace }}
   labels:
     {{- include "thoras.labels" . | nindent 4 }}
 roleRef:
   kind: Role
-  name: {{ .Values.thorasDashboard.serviceAccount.name }}-role
+  name: {{ .Values.thorasDashboard.serviceAccount.name }}
   apiGroup: rbac.authorization.k8s.io
 subjects:
 - kind: ServiceAccount
