--- a/charts/thoras/templates/api-server-v2/rbac.yaml
+++ b/charts/thoras/templates/api-server-v2/rbac.yaml
@@ -4,15 +4,14 @@ apiVersion: rbac.authorization.k8s.io/v1
 {{- if .rbacNamespace }}
 kind: Role
 metadata:
-  name: {{ print .Values.thorasApiServerV2.serviceAccount.name "-" .rbacNamespace }}
   namespace: {{ .rbacNamespace }}
 {{- else }}
 kind: ClusterRole
 metadata:
-  name: {{ print .Values.thorasApiServerV2.serviceAccount.name "-role" }}
 {{- end }}
   labels:
     {{- include "thoras.labels" . | nindent 4 }}
+  name: {{ .Values.thorasApiServerV2.serviceAccount.name }}
 rules:
 - apiGroups:
   - '*'
@@ -48,24 +47,22 @@ apiVersion: rbac.authorization.k8s.io/v1
 {{- if .rbacNamespace }}
 kind: RoleBinding
 metadata:
-  name: {{ print .Values.thorasApiServerV2.serviceAccount.name "-" .rbacNamespace }}
   namespace: {{ .rbacNamespace }}
 {{- else }}
 kind: ClusterRoleBinding
 metadata:
-  name: {{ print .Values.thorasApiServerV2.serviceAccount.name "-role" }}
   namespace: {{ .Release.Namespace }}
 {{- end }}
   labels:
     {{- include "thoras.labels" . | nindent 4 }}
+  name: {{ .Values.thorasApiServerV2.serviceAccount.name }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
+  name: {{ .Values.thorasApiServerV2.serviceAccount.name }}
 {{- if .rbacNamespace }}
   kind: Role
-  name: {{ print .Values.thorasApiServerV2.serviceAccount.name "-" .rbacNamespace }}
 {{- else }}
   kind: ClusterRole
-  name: {{ print .Values.thorasApiServerV2.serviceAccount.name "-role" }}
 {{- end }}
 subjects:
 - kind: ServiceAccount
@@ -99,7 +96,7 @@ imagePullSecrets:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: {{ .Values.thorasApiServerV2.serviceAccount.name}}
+  name: {{ print .Values.thorasApiServerV2.serviceAccount.name "-thoras" }}
   namespace: {{ .Release.Namespace }}
   labels:
     {{- include "thoras.labels" . | nindent 4 }}
@@ -114,13 +111,13 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: {{ .Values.thorasApiServerV2.serviceAccount.name }}
+  name: {{ print .Values.thorasApiServerV2.serviceAccount.name "-thoras" }}
   namespace: {{ .Release.Namespace }}
   labels:
     {{- include "thoras.labels" . | nindent 4 }}
 roleRef:
   kind: ClusterRole
-  name: {{ .Values.thorasApiServerV2.serviceAccount.name }}
+  name: {{ print .Values.thorasApiServerV2.serviceAccount.name "-thoras" }}
   apiGroup: rbac.authorization.k8s.io
 subjects:
 - kind: ServiceAccount
@@ -130,7 +127,7 @@ subjects:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  name: {{ .Values.thorasApiServerV2.serviceAccount.name }}
+  name: {{ print .Values.thorasApiServerV2.serviceAccount.name "-thoras" }}
   namespace: {{ .Release.Namespace }}
   labels:
     {{- include "thoras.labels" . | nindent 4 }}
@@ -142,13 +139,13 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: {{ .Values.thorasApiServerV2.serviceAccount.name }}
+  name: {{ print .Values.thorasApiServerV2.serviceAccount.name "-thoras" }}
   namespace: {{ .Release.Namespace }}
   labels:
     {{- include "thoras.labels" . | nindent 4 }}
 roleRef:
   kind: Role
-  name: {{ .Values.thorasApiServerV2.serviceAccount.name }}
+  name: {{ print .Values.thorasApiServerV2.serviceAccount.name "-thoras" }}
   apiGroup: rbac.authorization.k8s.io
 subjects:
 - kind: ServiceAccount
