--- a/charts/thoras/templates/dashboard/rbac.yaml
+++ b/charts/thoras/templates/dashboard/rbac.yaml
@@ -19,15 +19,14 @@ apiVersion: rbac.authorization.k8s.io/v1
 {{- if .rbacNamespace }}
 kind: Role
 metadata:
-  name: {{ print .Values.thorasDashboard.serviceAccount.name "-" .rbacNamespace }}
   namespace: {{ .rbacNamespace }}
 {{- else }}
 kind: ClusterRole
 metadata:
-  name: {{ print .Values.thorasDashboard.serviceAccount.name "-role" }}
 {{- end }}
   labels:
     {{- include "thoras.labels" . | nindent 4 }}
+  name: {{ .Values.thorasDashboard.serviceAccount.name }}
 rules:
 - apiGroups:
   - '*'
@@ -60,24 +59,22 @@ apiVersion: rbac.authorization.k8s.io/v1
 {{- if .rbacNamespace }}
 kind: RoleBinding
 metadata:
-  name: {{ print .Values.thorasDashboard.serviceAccount.name "-" .rbacNamespace }}
   namespace: {{ .rbacNamespace }}
 {{- else }}
 kind: ClusterRoleBinding
 metadata:
-  name: {{ print .Values.thorasDashboard.serviceAccount.name "-role" }}
   namespace: {{ .Release.Namespace }}
 {{- end }}
   labels:
     {{- include "thoras.labels" . | nindent 4 }}
+  name: {{ .Values.thorasDashboard.serviceAccount.name }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
+  name: {{ .Values.thorasDashboard.serviceAccount.name }}
 {{- if .rbacNamespace }}
   kind: Role
-  name: {{ print .Values.thorasDashboard.serviceAccount.name "-" .rbacNamespace }}
 {{- else }}
   kind: ClusterRole
-  name: {{ print .Values.thorasDashboard.serviceAccount.name "-role" }}
 {{- end }}
 subjects:
 - kind: ServiceAccount
@@ -97,7 +94,7 @@ subjects:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: {{ .Values.thorasDashboard.serviceAccount.name }}
+  name: {{ print .Values.thorasDashboard.serviceAccount.name "-thoras" }}
   namespace: {{ .Release.Namespace }}
   labels:
     {{- include "thoras.labels" . | nindent 4 }}
@@ -112,13 +109,13 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: {{ .Values.thorasDashboard.serviceAccount.name }}
+  name: {{ print .Values.thorasDashboard.serviceAccount.name "-thoras" }}
   namespace: {{ .Release.Namespace }}
   labels:
     {{- include "thoras.labels" . | nindent 4 }}
 roleRef:
   kind: ClusterRole
-  name: {{ .Values.thorasDashboard.serviceAccount.name }}
+  name: {{ print .Values.thorasDashboard.serviceAccount.name "-thoras" }}
   apiGroup: rbac.authorization.k8s.io
 subjects:
 - kind: ServiceAccount
@@ -128,7 +125,7 @@ subjects:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  name: {{ .Values.thorasDashboard.serviceAccount.name }}
+  name: {{ print .Values.thorasDashboard.serviceAccount.name "-thoras" }}
   namespace: {{ .Release.Namespace }}
   labels:
     {{- include "thoras.labels" . | nindent 4 }}
@@ -140,13 +137,13 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: {{ .Values.thorasDashboard.serviceAccount.name }}
+  name: {{ print .Values.thorasDashboard.serviceAccount.name "-thoras" }}
   namespace: {{ .Release.Namespace }}
   labels:
     {{- include "thoras.labels" . | nindent 4 }}
 roleRef:
   kind: Role
-  name: {{ .Values.thorasDashboard.serviceAccount.name }}
+  name: {{ print .Values.thorasDashboard.serviceAccount.name "-thoras" }}
   apiGroup: rbac.authorization.k8s.io
 subjects:
 - kind: ServiceAccount
