--- a/charts/thoras/templates/monitor/rbac.yaml
+++ b/charts/thoras/templates/monitor/rbac.yaml
@@ -4,15 +4,14 @@ apiVersion: rbac.authorization.k8s.io/v1
 {{- if .rbacNamespace }}
 kind: Role
 metadata:
-  name: {{ print "thoras-monitor-" .rbacNamespace }}
   namespace: {{ .rbacNamespace }}
 {{- else }}
 kind: ClusterRole
 metadata:
-  name: {{ print "thoras-monitor" "-role" }}
 {{- end }}
   labels:
     {{- include "thoras.labels" . | nindent 4 }}
+  name: "thoras-monitor"
 rules:
 - apiGroups:
   - '*'
@@ -52,24 +51,22 @@ apiVersion: rbac.authorization.k8s.io/v1
 {{- if .rbacNamespace }}
 kind: RoleBinding
 metadata:
-  name: {{ print "thoras-monitor-" .rbacNamespace }}
   namespace: {{ .rbacNamespace }}
 {{- else }}
 kind: ClusterRoleBinding
 metadata:
-  name: {{ print "thoras-monitor" "-role" }}
   namespace: {{ .Release.Namespace }}
 {{- end }}
   labels:
     {{- include "thoras.labels" . | nindent 4 }}
+  name: "thoras-monitor"
 roleRef:
   apiGroup: rbac.authorization.k8s.io
+  name: "thoras-monitor"
 {{- if .rbacNamespace }}
   kind: Role
-  name: {{ print "thoras-monitor-" .rbacNamespace }}
 {{- else }}
   kind: ClusterRole
-  name: {{ print "thoras-monitor" "-role" }}
 {{- end }}
 subjects:
 - kind: ServiceAccount
@@ -103,7 +100,7 @@ imagePullSecrets:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: thoras-monitor
+  name: thoras-monitor-thoras
   namespace: {{ .Release.Namespace }}
   labels:
     {{- include "thoras.labels" . | nindent 4 }}
@@ -122,14 +119,14 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: thoras-monitor
+  name: thoras-monitor-thoras
   namespace: {{ .Release.Namespace }}
   labels:
     {{- include "thoras.labels" . | nindent 4 }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: thoras-monitor
+  name: thoras-monitor-thoras
 subjects:
 - kind: ServiceAccount
   name: thoras-monitor
