--- a/charts/thoras/templates/operator/rbac.yaml
+++ b/charts/thoras/templates/operator/rbac.yaml
@@ -11,7 +11,7 @@ metadata:
 {{- end }}
   labels:
     {{- include "thoras.labels" . | nindent 4 }}
-  name: "thoras-operator"
+  name: thoras-operator
 rules:
 - apiGroups:
   - '*'
@@ -69,10 +69,10 @@ metadata:
 {{- end }}
   labels:
     {{- include "thoras.labels" . | nindent 4 }}
-  name: "thoras-operator"
+  name: thoras-operator
 roleRef:
   apiGroup: rbac.authorization.k8s.io
-  name: "thoras-operator"
+  name: thoras-operator
 {{- if .rbacNamespace }}
   kind: Role
 {{- else }}
