--- a/charts/thoras/templates/collector/rbac.yaml
+++ b/charts/thoras/templates/collector/rbac.yaml
@@ -11,7 +11,7 @@ metadata:
 {{- end }}
   labels:
     {{- include "thoras.labels" . | nindent 4 }}
-  name: "thoras-collector"
+  name: thoras-collector
 rules:
 - apiGroups:
   - '*'
@@ -77,10 +77,10 @@ metadata:
 {{- end }}
   labels:
     {{- include "thoras.labels" . | nindent 4 }}
-  name: "thoras-collector"
+  name: thoras-collector
 roleRef:
   apiGroup: rbac.authorization.k8s.io
-  name: "thoras-collector"
+  name: thoras-collector
 {{- if .rbacNamespace }}
   kind: Role
 {{- else }}
